added game logo

--- a/public/index.html
+++ b/public/index.html
@@ -379,7 +379,7 @@
             Aquests són alguns dels recursos en línia que hem publicat <br/>
           </p>
         </div>
-        <div class="d-flex pt-2 flex-wrap justify-content-center">
+        <div class="pt-2 text-center">
           <a
             class="resource-button link-zoom-in"
             href="./quiz-es/index.html"
@@ -387,7 +387,7 @@
             data-lang="es"
           >
             <img
-              class="img-fluid img-3"
+              class="img-fluid"
               src="../assets/img/quiz-logo.png"
             />
           </a>
@@ -398,7 +398,7 @@
             data-lang="ca" style="display:none;"
           >
             <img
-              class="img-fluid img-3"
+              class="img-fluid"
               src="../assets/img/quiz-logo.png"
             />
           </a>
@@ -409,7 +409,7 @@
             data-lang="es"
           >
             <img
-              class="img-fluid img-3"
+              class="img-fluid"
               src="../assets/img/PF_logo.png"
             />
           </a>
@@ -420,8 +420,18 @@
             data-lang="ca" style="display:none;"
           >
             <img
-              class="img-fluid img-3"
+              class="img-fluid"
               src="../assets/img/PF_logo.png"
+            />
+          </a>
+          <a
+            class="resource-button link-zoom-in"
+            href="./game/"
+            target="_blank"
+          >
+            <img
+              class="img-fluid"
+              src="../assets/img/CS_logo_aka.png"
             />
           </a>
         </div>
