added last psico case

--- a/public/psico-es/index.html
+++ b/public/psico-es/index.html
@@ -198,16 +198,19 @@
                 </div>
               </div>
             </a>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/RnkbRf"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso12.png" />
               <div class="case-content">
                 <div class="case-text">
                   <p>MI HIJO CON NECESIDADES ESPECIALES, ENCERRADO</p>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
-        
         </div>
       </div>
     </main>
