--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
       >
     </main>
 
-    <div id="message" class="main-msg pt-4 pb-2 mb-4">
+    <div id="message" class="main-msg pt-4 pb-2">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-sm-7">
+          <!-- <div class="col-lg-8 col-sm-7">
             <h5 data-lang="es">
               ¡En casa, sí, pero con los brazos cruzados, no!
             </h5>
@@ -129,21 +129,57 @@
                 Innovador@
               </strong>
             </a>
-          </div>
+          </div> -->
           <div class="col">
-            <p class="text-center">
-              <small data-lang="es">
-                ATENCIÓN: la única aportación que Desin2FightCOVID19 solicita es voluntaria, de tiempo y conocimientos. <strong>En ningún caso se piden aportaciones económicas</strong>. Si en algún momento recibes alguna solicitud económica en nuestro nombre, te rogamos que nos lo hagas llegar a través de nuestros <a href="#canales">canales oficiales</a> para poder actuar en consecuencia. Si en algún momento esta política cambia, lo daríamos a conocer por dichos canales. Muchas gracias por tu apoyo.
-              </small>
-              <small data-lang="ca" style="display:none;">
-                ATENCIÓ: la única aportació que Desin2FightCOVID19 sol·licita és voluntària, de temps i de coneixements. <strong>En cap cas es demanen aportacions econòmiques</strong>. Si en algun moment reps alguna sol·licitud econòmica en nom nostre, et preguem que ens ho facis saber a través dels nostres <a href="#canales"> canals oficials </a> per poder actuar en conseqüència. Si en algun moment aquesta política canvia, ho donaríem a conèixer per aquests canals. Moltes gràcies pel teu suport.
-              </small>
+            <h5 data-lang="es">
+              ¡En casa, sí, pero con los brazos cruzados, no!
+            </h5>
+            <h5 data-lang="ca" style="display:none;">
+              A casa, sí, però amb els braços creuats, no!
+            </h5>
+            <p class="lead" data-lang="es">
+              Design2FightCOVID19 ha puesto a prueba nuestra capacidad durante 6 semanas, para aportar 11 pequeñas acciones contra la COVID19. Un ejercicio continuado de inteligencia colectiva, sin dejar de trabajar ni un solo día en los proyectos.
+            </p>
+            <p class="lead" data-lang="ca" style="display:none;">
+              Design2FightCOVID19 ha posat a prova la nostra capacitat durant 6 setmanes, per aportar 11 petites accions contra la COVID19. Un exercici continuat d'intel·ligència col·lectiva, sense deixar de treballar ni un sol dia en els projectes.
             </p>
           </div>
         </div>
       </div>
     </div>
-
+    <div id="beca" class="beca pt-4 pb-4 mb-4">
+      <!-- <h1 class="mb-4">¿Te gustaria segir ayudando?</h1> -->
+      <img
+        class="beca-img disabled"
+        src="../assets/img/beca2.png"
+      >
+      <div class="container">
+        <div class="row" data-lang="es">
+          <div class="col-md-6">
+            20h semanales<br>  
+            Importe y duración en función del candidato/a<br>
+          </div>
+          <div class="col-md-6">
+            El Objetivo de la beca es dar soporte a la Continuidad de la experiencia como plataforma de soporte a la innovación en salud.
+          </div>
+          <div class="col mt-4">
+            Interesadas/os: Enviar CV de máximo 1 página que incluya una breve nota sobre la razón para optar a la beca a <a href="mailto: michelle.catta.preta@upc.edu">michelle.catta.preta@upc.edu</a>
+          </div>
+        </div>
+        <div class="row" data-lang="ca" style="display:none;">
+          <div class="col-md-6">
+            20h setmanals<br>  
+            Import i duració en funció del candidat/a<br>
+          </div>
+          <div class="col-md-6">
+            L’objectiu de la beca és donar suport a la continuïtat de l’experiència com a plataforma de suport a la innovació  en salut
+          </div>
+          <div class="col mt-4">
+            Interessades/ts: Enviar CV de màxim 1 pàgina que inclogui una breu nota sobre la raó per optar a la beca a <a href="mailto: michelle.catta.preta@upc.edu">michelle.catta.preta@upc.edu</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div id="projects" class="banco-microproyectos pt-4 mt-4 pb-4 mb-4">
       <div class="container">
@@ -333,7 +369,7 @@
             </div>
           </a> -->
         </div>
-        <a
+        <!-- <a
           class="button link-zoom-in h5"
           href="https://onsanity.typeform.com/to/MvOuAW"
           target="_blank"
@@ -345,7 +381,7 @@
             <span data-lang="es">Proponlo</span>
           <span data-lang="ca" style="display:none;">Proposa'l</span>
           </strong>
-        </a>
+        </a> -->
       </div>
     </div>
 
@@ -544,7 +580,14 @@
             </ul>
           </div>
         </div>
-
+        <p class="text-center">
+          <small data-lang="es">
+            ATENCIÓN: la única aportación que Desin2FightCOVID19 solicita es voluntaria, de tiempo y conocimientos. <strong>En ningún caso se piden aportaciones económicas</strong>. Si en algún momento recibes alguna solicitud económica en nuestro nombre, te rogamos que nos lo hagas llegar a través de nuestros <a href="#canales">canales oficiales</a> para poder actuar en consecuencia. Si en algún momento esta política cambia, lo daríamos a conocer por dichos canales. Muchas gracias por tu apoyo.
+          </small>
+          <small data-lang="ca" style="display:none;">
+            ATENCIÓ: la única aportació que Desin2FightCOVID19 sol·licita és voluntària, de temps i de coneixements. <strong>En cap cas es demanen aportacions econòmiques</strong>. Si en algun moment reps alguna sol·licitud econòmica en nom nostre, et preguem que ens ho facis saber a través dels nostres <a href="#canales"> canals oficials </a> per poder actuar en conseqüència. Si en algun moment aquesta política canvia, ho donaríem a conèixer per aquests canals. Moltes gràcies pel teu suport.
+          </small>
+        </p>
       </div>
     </div>
   </div>
@@ -552,125 +595,6 @@
   <div id="footer" class="footer pt-4 mt-4 pb-4 mb-4 container text-center">
     <small>
       Made with <i class="fas fa-heart help"></i>
-      <!-- <a
-        href="https://abeldb.com/"
-        target="_blank"
-      >
-        Abel
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/altrome/"
-        target="_blank"
-      >
-        Alex
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/ayaulan/"
-        target="_blank"
-      >
-        Aya
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/carlos-mart%C3%ADnez-gaitero/"
-        target="_blank"
-      >
-        Carlos
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://instagram.com/dave_vilar?igshid=rxs0kn1qsh0j"
-        target="_blank"
-      >
-        David
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/fabiana-pando-147450185/"
-        target="_blank"
-      >
-        Fabiana
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/fionavives/"
-        target="_blank"
-      >
-        Fiona
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/jaumetarradasllort/"
-        target="_blank"
-      >
-        Jaume
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/jmmonguet/"
-        target="_blank"
-      >
-         Josep Maria
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-      href="https://www.linkedin.com/in/j%C3%BAlia-rocosa-raich-35a4931a0/"
-      target="_blank"
-      >
-        Julia
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.instagram.com/melisasitges/?hl=es"
-        target="_blank"
-      >
-        Melisa
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/michelle-catta-preta/"
-        target="_blank"
-      >
-         Michelle
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/natalia-carmona-vd/"
-        target="_blank"
-      >
-        Natalia
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/nil-peguero-mart%C3%ADnez-6667a21a1/"
-        target="_blank"
-      >
-        Nil
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/pol-s%C3%A1nchez-bobet/"
-        target="_blank"
-      >
-        Pol S.
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/pol-vilella-vilad%C3%A9s-a35b45138/"
-        target="_blank"
-      >
-        Pol V.
-      </a>
-      <span class="opacity-50">&nbsp;|&nbsp;</span>
-      <a
-        href="https://www.linkedin.com/in/victoorjim/"
-        target="_blank"
-      >
-        Victor
-      </a> 
-      <br/> -->
       2020 | #Design2FightCOVID19
     </small>
   </div>
