--- a/public/psico-en/index.html
+++ b/public/psico-en/index.html
@@ -16,20 +16,20 @@
   <meta name="theme-color" content="#ffffff">
   <meta property="og:title" content="Design2FightCOVID19" />
   <meta property="og:image" content="http://cdn.onsanity.com/images/d2fc19/pfTwitter.png"/>
-  <meta property="og:url" content="//design2fightcovid19.com/psico-es/" />
+  <meta property="og:url" content="//design2fightcovid19.com/psico-en/" />
   <meta name="description"
-    content="Un espacio digital creado para ofrecer a la gente estrategias para afrontar los conflictos emocionales más frecuentes producidos en situaciones de confinamiento." />
+    content="A digital space created to offer people strategies to face the most frequent emotional conflicts produced in situations of confinement." />
   <meta name="og:description"
-    content="Un espacio digital creado para ofrecer a la gente estrategias para afrontar los conflictos emocionales más frecuentes producidos en situaciones de confinamiento." />
+    content="A digital space created to offer people strategies to face the most frequent emotional conflicts produced in situations of confinement." />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@d2fc19" />
   <meta name="twitter:title" content="Design2FightCOVID19" />
   <meta name="twitter:description"
-  content="Un espacio digital creado para ofrecer a la gente estrategias para afrontar los conflictos emocionales más frecuentes producidos en situaciones de confinamiento." />
+  content="A digital space created to offer people strategies to face the most frequent emotional conflicts produced in situations of confinement." />
   <meta name="twitter:image" content="http://cdn.onsanity.com/images/d2fc19/pfTwitter.png"/>
   <meta name="twitter:creator" content="@d2fc19" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <script src="../../src/js/psico-es.js" type="text/javascript"></script>
+  <script src="../../src/js/psico-en.js" type="text/javascript"></script>
 
   <!-- Fonts and Material Icons -->
   <link rel="stylesheet" as="font"
@@ -55,165 +55,165 @@
           <div class="text-center mb-4">
             <img
               class="img-fluid img-2"
-              src="../../assets/img/PF_banner.png"
+              src="../../assets/img/PF_banner-EN.png"
             >
           </div>
           <div class="d-flex justify-content-center">
             <h2
               class="pt-2 mb-3"
             >
-            Aprender de las emociones<br>durante el confinamiento
+            Learn from your emotions<br>during lockdown
             </h2>
           </div>
           <div class="d-flex justify-content-center">
             <h5
               class="pt-2 mb-3"
             >
-            <a href="/psico-en/index.html">ENGLISH VERSION</a>
+            <a href="/psico-es/index.html">VERSION EN ESPAÑOL</a>
             </h5>
           </div>
           <div class="d-flex pt-5 flex-wrap justify-content-center">
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/YLMzyd"
+              href="https://onsanity.typeform.com/to/pEXJ7tlk"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso1.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>TODO EL DIA VIENDO SERIES</p>
+                  <p>CONSTANTLY<br>WATCHING TV</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/OuIxt4"
+              href="https://onsanity.typeform.com/to/a4cPpB3M"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso2.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>GANAS DE SALIR<br>DE CASA</p>
+                  <p>WANTING TO GET<br>OUT OF HOME</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/fb7PO2"
+              href="https://onsanity.typeform.com/to/rceevtqQ"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso3.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>LOS NIÑOS<br>SE PELEAN</p>
+                  <p>KIDS<br>FIGHTING</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/jCxXD7"
+              href="https://onsanity.typeform.com/to/QEZqheKv"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso4.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>NO PODER AYUDAR A LOS HIJOS EN SUS TAREAS</p>
+                  <p>NOT BEING ABLE TO HELP THE KIDS WITH THEIR HOMEWORK</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/GD47rG"
+              href="https://onsanity.typeform.com/to/l7JBlYzx"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso5.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>HABER PERDIDO UN SER QUERIDO</p>
+                  <p>LOSING<br>A LOVED ONE</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/BeAOyJ"
+              href="https://onsanity.typeform.com/to/pw9UiKa7"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso9.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>SENTIRSE AISLADO SIENDO EXTRANJERO</p>
+                  <p>BEING FROM A FOREIGN COUNTRY AND FEELING ISOLATED</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/Dub8A2"
+              href="https://onsanity.typeform.com/to/GXMKz54b"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso11.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>SECUELAS TRAS EL CONFINAMIENTO</p>
+                  <p>CONSEQUENCES OF LOCKDOWN</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/pJt3Mw"
+              href="https://onsanity.typeform.com/to/LtASHZTT"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso8.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>FAMILIAR EN UNA RESIDENCIA</p>
+                  <p>FAMILY MEMBER IN A NURSING HOME</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/T1W6jl"
+              href="https://onsanity.typeform.com/to/IgZEP3a5"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso6.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>DISCUSIONES<br>DE PAREJA</p>
+                  <p>COUPLE<br>ARGUEMENTS</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/JsBPfz"
+              href="https://onsanity.typeform.com/to/SFVcZ9Fq"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso7.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>PÉRDIDA<br>DE EMPLEO</p>
+                  <p>LOSING<br>OUR JOB</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/pYKuKs"
+              href="https://onsanity.typeform.com/to/lkj8ryfw"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso10.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>YA LO HARÉ<br>MAÑANA</p>
+                  <p>I WILL DO IT<br>TOMORROW</p>
                 </div>
               </div>
             </a>
             <a
               class="case link-zoom-in"
-              href="https://onsanity.typeform.com/to/RnkbRf"
+              href="https://onsanity.typeform.com/to/ZCB3cDc2"
               target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/PF_caso12.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>MI HIJO CON NECESIDADES ESPECIALES, ENCERRADO</p>
+                  <p>MI SON WITH SPECIAL NEED IS LOCKED DOWN</p>
                 </div>
               </div>
             </a>
