--- a/public/psico-es/index.html
+++ b/public/psico-es/index.html
@@ -55,7 +55,7 @@
           <div class="text-center mb-4">
             <img
               class="img-fluid img-2"
-              src="../../assets/img/PF_banner.png"
+              src="../../assets/img/PF_banner-EN.png"
             >
           </div>
           <div class="d-flex justify-content-center">
