--- a/public/psico-en/index.html
+++ b/public/psico-en/index.html
@@ -43,6 +43,32 @@
     gtag('js', new Date());
     gtag('config', 'UA-162087421-1');
   </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-162087421-1');
+    function typeformURL() {
+      var input = "ABC1234";
+      var text = "";
+      var possible;
+      for (var j = 0; j < input.length; j++) {
+        if (input[j] == " ") {
+            possible = ' ';
+        } else if ((input[j] == input[j].toUpperCase()) && (input[j] != input[j].toLowerCase())) {
+            possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        } else if ((input[j] == input[j].toLowerCase()) && (input[j] != input[j].toUpperCase())) {
+            possible = "abcdefghijklmnopqrstuvwxyz";
+        } else if ('0123456789'.indexOf(input[j]) !== -1) {
+            possible = "0123456789";
+        } else {
+            possible = "#!@~$%^&*)-_"
+        }
+        text += possible.charAt(Math.floor(Math.random() * possible.length));
+        }
+        return text;
+    }
+  </script>
 </head>
 
 
@@ -66,11 +92,25 @@
             </h2>
           </div>
           <div class="d-flex justify-content-center">
-            <h5
-              class="pt-2 mb-3"
+            <h6
+              class="pt-1 mb-2"
             >
             <a href="/psico-es/index.html">VERSION EN ESPAÑOL</a>
-            </h5>
+            </h6>
+          </div>
+          <div class="d-flex pt-4 flex-wrap justify-content-center">
+            <a
+              class="bigButton link-zoom-in"
+              id="#formLink"
+              target="_blank"
+            >
+            <img class="img-fluid" src="../../assets/img/help.png" />
+            <div class="bigButton-content">
+              <div class="bigButton-text">
+                We want you to be one of our collaborators
+              </div>
+            </div>
+            </a>
           </div>
           <div class="d-flex pt-5 flex-wrap justify-content-center">
             <a
@@ -230,6 +270,12 @@
       2020 | <a href="/">#Design2FightCOVID19</a>
     </small>
   </div>
+  <script>
+    document.getElementById("#formLink").onclick = function () {
+        var id = typeformURL();
+        location.href = "https://onsanity.typeform.com/to/to59uLm4#id=" + id;
+    };
+  </script>
 </body>
 
 
