--- a/public/psico-en/index.html
+++ b/public/psico-en/index.html
@@ -98,12 +98,12 @@
             <a href="/psico-es/index.html">VERSION EN ESPAÑOL</a>
             </h6>
           </div>
-          <div class="d-flex justify-content-center">
+          <!-- <div class="d-flex justify-content-center">
             <h1 style="font-size: 36px; color: black; background-color: yellow;">
               UNDER MAINTENANCE
             </h1>
-        </div>
-          <!-- <div class="d-flex pt-4 flex-wrap justify-content-center">
+        </div> -->
+          <div class="d-flex pt-4 flex-wrap justify-content-center">
             <a
               class="bigButton link-zoom-in"
               id="#formLink"
@@ -116,8 +116,8 @@
               </div>
             </div>
             </a>
-          </div> -->
-          <!-- <div class="d-flex pt-5 flex-wrap justify-content-center">
+          </div>
+          <div class="d-flex pt-5 flex-wrap justify-content-center">
             <a
               class="case link-zoom-in"
               href="https://onsanity.typeform.com/to/pEXJ7tlk"
@@ -262,7 +262,7 @@
                 </div>
               </div>
             </a>
-          </div> -->
+          </div>
         </div>
       </div>
     </main>
