fixed some errors

--- a/public/psico-en/index.html
+++ b/public/psico-en/index.html
@@ -258,7 +258,7 @@
               <img class="img-fluid" src="../../assets/img/PF_caso12.png" />
               <div class="case-content">
                 <div class="case-text">
-                  <p>MI SON WITH SPECIAL NEED IS LOCKED DOWN</p>
+                  <p>MY SON WITH SPECIAL NEED IS LOCKED DOWN</p>
                 </div>
               </div>
             </a>
