--- a/public/psico-es/index.html
+++ b/public/psico-es/index.html
@@ -98,7 +98,7 @@
               id="#formLink"
               target="_blank"
             >
-            <img class="img-fluid" src="../../assets/img/Ayuda.png" />
+            <img class="img-fluid" src="../../assets/img/Ayuda.png?v=2" />
             <div class="bigButton-content">
               <div class="bigButton-text">
                 Queremos que seas uno de nuestros colaboradores
