added news and videos

--- a/public/index.html
+++ b/public/index.html
@@ -444,7 +444,6 @@
         </div> -->
       </div>
     </div>
-
     <div id="about" class="questions pt-4 mt-4 pb-4 mb-4 container text-left">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6">
@@ -555,6 +554,44 @@
             ATENCIÓ: la única aportació que Desin2FightCOVID19 sol·licita és voluntària, de temps i de coneixements. <strong>En cap cas es demanen aportacions econòmiques</strong>. Si en algun moment reps alguna sol·licitud econòmica en nom nostre, et preguem que ens ho facis saber a través dels nostres <a href="#canales"> canals oficials </a> per poder actuar en conseqüència. Si en algun moment aquesta política canvia, ho donaríem a conèixer per aquests canals. Moltes gràcies pel teu suport.
           </small>
         </p>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          <div class="question">
+            <h4 data-lang="es">¿Como funciona?</h4>
+            <h4 data-lang="ca" style="display:none;">Com funciona?</h4>
+          </div>
+          <iframe src="https://player.vimeo.com/video/404585537" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+      
+    </div>
+    <div id="media" class=" main pt-4 mt-4 pb-4 mb-4">
+      <div class="container">
+        <div class="d-flex justify-content-center">
+          <h1
+            class="pt-2 mb-3 title"
+          >
+            #Design2FightCOVID media
+          </h1>
+        </div>
+        <div class="d-flex pt-5 flex-wrap justify-content-center">
+          <div class="col">
+            <iframe src="https://www.youtube.com/embed/2liX9-ZBJnA?start=66" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p><a href="https://www.upc.edu/es/sala-de-prensa/noticias/estudiantes-upc-contra-la-covid-19" target="_blank">+ INFO</a></p>
+          </div>
+          <div class="col">
+            <iframe src="https://cdnapisec.kaltura.com/p/2346171/sp/234617100/embedIframeJs/uiconf_id/42600891/partner_id/2346171?iframeembed=true&playerId=0_ljhih0gy&entry_id=0_ljhih0gy&flashvars[streamerType]=auto" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+            <p><a href="https://beteve.cat/ciencia-i-tecnologia/design-fight-covid-iniciativa-web-salvar-vides-coronavirus/" target="_blank">+ INFO</a></p>
+          </div>
+          <div class="col">
+            <iframe src="https://www.youtube.com/embed/y94HDNjsBFE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p><a href="https://upcommons.upc.edu/handle/2117/338687" target="_blank">+ INFO</a></p>
+          </div>
+          <div class="col">
+            <iframe src="https://www.youtube.com/embed/8_V2SOtQzn4?start=4403" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
   </div>
